--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,8 +9,7 @@
             <p>Highly organized and detail-oriented, graduated with honors from It Step Georgia and Academy Of Digital Industries, looking for a Junior Front-End (Angular) position.</p>
             <span>Additional experience from YouTube Knowledge of Git and GitHub</span>
             <div class="buttons">
-                <button class="but"><a href="https://gold-lelah-80.tiiny.site/"  target="_blank">View CV</a>  </button>
-                
+                <button class="but" (click)="downloadMyFile()">Download CV</button> 
             </div>
         </div>
         
