--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -3,9 +3,9 @@
     <div class="child">
         <div class="child_item">
             <div class="item_div">
-                <a href="https://zingy-nougat-c8777e.netlify.app/"><img [src]="imglink" alt="img" /></a>
+                <a href="https://vazhamikadze112.netlify.app/"><img [src]="imglink" alt="img" /></a>
             </div>
-            <p class="resource">View <a href="https://zingy-nougat-c8777e.netlify.app/" target="_blank">WebSite</a></p>
+            <p class="resource">View <a href="https://vazhamikadze112.netlify.app/" target="_blank">WebSite</a></p>
             <p class="resource">View <a href="https://github.com/mikadze13/VazhaMikadze/tree/main/unilab" target="_blank">Code</a></p>
         </div>
 
